# ox-jsdoc

./: .gitignore  .gitmodules  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts
.claude/skills/perf-optimize/: SKILL.md
.github/workflows/: ci.yml  github-label-sync.yml  release-napi.yml  release.yml  reproduire.yml  typos.yml  zizmor.yml
apps/playground/: CLAUDE.md  index.html  package.json  tsconfig.json  vite.config.ts  void.json
apps/playground/scripts/: vize-check.mjs
apps/playground/src/: App.vue  main.ts  style.css  vite-env.d.ts
assets/: README.md
crates/ox_jsdoc/: Cargo.toml  README.md
crates/ox_jsdoc/benches/: decoder.rs  encoder.rs  parser.rs
crates/ox_jsdoc/examples/: measure_string_leaf_distribution.rs  profile_parse.rs  profile_parse_batch.rs  profile_parse_block.rs
crates/ox_jsdoc/src/: ast.rs  lib.rs
crates/ox_jsdoc/src/analyzer/: mod.rs
crates/ox_jsdoc/src/decoder/: visitor.rs
crates/ox_jsdoc/src/decoder/nodes/: mod.rs
crates/ox_jsdoc/src/format/: root_index.rs
crates/ox_jsdoc/src/parser/: checkpoint.rs  context.rs  diagnostics.rs  lexer.rs  mod.rs  scanner.rs  text.rs  type_emit.rs  type_parse.rs  type_stringify.rs
crates/ox_jsdoc/src/serializer/: json.rs  mod.rs
crates/ox_jsdoc/src/type_parser/: ast.rs  mod.rs  precedence.rs  stringify.rs  token.rs
crates/ox_jsdoc/src/validator/: mod.rs
crates/ox_jsdoc/src/writer/: binary_writer.rs  extended_data.rs
crates/ox_jsdoc/tests/: cross_language_parity.rs  description_raw.rs  roundtrip.rs  tag_aliasing.rs  type_fixtures.rs  type_parse_unit.rs  visitor.rs
crates/ox_jsdoc_binary/: Cargo.toml
crates/ox_jsdoc_binary/benches/: decoder.rs  encoder.rs  parser.rs
crates/ox_jsdoc_binary/examples/: measure_string_leaf_distribution.rs  profile_parse.rs  profile_parse_batch.rs  profile_parse_block.rs
crates/ox_jsdoc_binary/src/: lib.rs
crates/ox_jsdoc_binary/src/decoder/: error.rs  helpers.rs  mod.rs  source_file.rs  visitor.rs
crates/ox_jsdoc_binary/src/decoder/nodes/: comment_ast.rs  mod.rs  type_node.rs
crates/ox_jsdoc_binary/src/format/: diagnostics.rs  extended_data.rs  header.rs  kind.rs  mod.rs  node_record.rs  root_index.rs  string_field.rs  string_table.rs
crates/ox_jsdoc_binary/src/parser/: context.rs  mod.rs  scanner.rs  token.rs  type_data.rs  type_emit.rs  type_parse.rs
crates/ox_jsdoc_binary/src/writer/: binary_writer.rs  extended_data.rs  mod.rs  string_table.rs
crates/ox_jsdoc_binary/src/writer/nodes/: comment_ast.rs  mod.rs  type_node.rs
crates/ox_jsdoc_binary/tests/: roundtrip.rs  visitor.rs
crates/ox_jsdoc_origin/: Cargo.toml
crates/ox_jsdoc_origin/src/: ast.rs  lib.rs
crates/ox_jsdoc_origin/tests/: cross_language_parity.rs  description_raw.rs  tag_aliasing.rs  type_fixtures.rs  type_parse_unit.rs
design/: ast.md  index.md  syntax.ebnf
design/001-performance/: README.md  implementation.md  non-goals.md  principles.md
design/001-performance/implementation/: adoption.md  architecture.md  directions.md  measurement.md  optimization-patterns.md  parser-api.md  scanner-parser.md
design/002-project-structure/: README.md
design/003-js-binding/: README.md
design/004-wasm/: README.md
design/005-jsdoccomment-compat/: README.md
design/006-parsed-type/: README.md
design/007-binary-ast/: README.md  architecture.md  ast-nodes.md  batch-processing.md  benchmark.md  encoding.md  format.md  js-decoder.md  phases.md  rust-impl.md  testing.md
design/007-binary-ast/refs/: benchmark-results.md  binary-ast-draft-v2-deep-review.md  (+3 more)
design/008-oxlint-oxfmt-support/: README.md  consumer-guide.md
design/009-jsdoc-linter-benchmark/: README.md
design/010-main-stream-binary/: README.md
fixtures/cross-language/: description-text.json
napi/ox-jsdoc/: Cargo.toml  README.md  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
napi/ox-jsdoc-binary/: Cargo.toml  README.md  build.rs  package.json  vitest.config.ts
napi/ox-jsdoc-binary/src/: lib.rs
napi/ox-jsdoc-binary/src-js/: bindings.d.ts  bindings.js  index.d.ts  index.js
napi/ox-jsdoc-binary/test/: alias.test.ts  description-text-parity.test.ts  parse.test.ts
napi/ox-jsdoc-binary/test/compat/: fixtures.ts
napi/ox-jsdoc-origin/: .npmignore  Cargo.toml  README.md  package.json
napi/ox-jsdoc-origin/src/: lib.rs
napi/ox-jsdoc-origin/test/: parsed-type.test.ts
napi/ox-jsdoc/src/: lib.rs
napi/ox-jsdoc/src-js/: index.d.ts  index.js
napi/ox-jsdoc/test/: description-raw.test.ts  description-text-parity.test.ts  parse.test.ts  parsed-type.test.ts
napi/ox-jsdoc/test/compat/: compat.test.ts  fixtures.ts  helpers.ts
scripts/: analyze-profile.js  bump-cargo-version.mjs  npm-trust.sh  release.sh
tasks/benchmark/: Cargo.toml  package.json
tasks/benchmark/benches/: oxc_jsdoc.rs  parser.rs  serializer.rs  type_parser.rs  validator.rs
tasks/benchmark/results/: jsdoc-linter-hyperfine.json  jsdoc-linter-hyperfine.md
tasks/benchmark/scripts/: binary-size-comparison.mjs  binary-tojson-walk.mjs  binary-vs-typed-napi.mjs  binary-vs-typed-wasm.mjs  comment-parser-fixtures.mjs  full-comparison.mjs  jsdoc-linter-hyperfine.sh  jsdoc-linter-report.mjs  jsdoc-linter-setup.mjs  jsdoccomment-fixtures.mjs  napi-overhead-profile.mjs  optin-matrix.mjs  ox-jsdoc-fixtures.mjs  parse-batch-vs-loop.mjs  parsers-comparison.mjs  sanity-check.mjs  type-parser-compare.mjs  wasm-overhead-profile.mjs
tasks/benchmark/scripts/lib/: _smoke.mjs  measure.mjs
tasks/benchmark/src/: lib.rs
tasks/xtask/: Cargo.toml
wasm/ox-jsdoc/: Cargo.toml  README.md  package.json  vite.config.ts
wasm/ox-jsdoc-binary/: .npmignore  Cargo.toml  README.md  package.json  vite.config.ts
wasm/ox-jsdoc-binary/src/: lib.rs
wasm/ox-jsdoc-binary/src-js/: index.d.ts  index.js
wasm/ox-jsdoc-binary/test/: alias.test.ts  parse.test.ts
wasm/ox-jsdoc-origin/: Cargo.toml  README.md  package.json  vite.config.ts
wasm/ox-jsdoc/src/: lib.rs
wasm/ox-jsdoc/src-js/: index.d.ts  index.js
wasm/ox-jsdoc/test/: parse.test.ts
(+47 files in other folders)
