[workspace]
resolver = "3"
members = [
  "crates/*",
  "tasks/*"
  # Add "napi/*" once those Cargo crates exist.
  # Cargo treats unmatched workspace member globs as manifest errors.
]
exclude = ["refers/*"]

[workspace.package]
edition = "2024"
rust-version = "1.92.0"
license = "MIT"

[workspace.dependencies]
oxc_allocator = "=0.123.0"
oxc_diagnostics = "=0.123.0"
oxc_span = "=0.123.0"
