[workspace]
resolver = "3"
members = ["crates/*", "tasks/benchmark", "tasks/xtask", "napi/*", "wasm/*"]
# JS-only thin alias directories under napi/ and wasm/ have no Cargo.toml
# and must be excluded from the workspace glob explicitly.
exclude = ["refers/*", "napi/ox-jsdoc-binary", "wasm/ox-jsdoc-binary"]

[workspace.package]
edition = "2024"
rust-version = "1.94.0"
license = "MIT"

[workspace.dependencies]
oxc_allocator = "=0.135.0"
oxc_ast = "=0.135.0"
oxc_diagnostics = "=0.135.0"
oxc_parser = "=0.137.0"
oxc_span = "=0.135.0"
