[package]
name = "ox_jsdoc"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
oxc_allocator.workspace = true
oxc_diagnostics.workspace = true
oxc_span.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

