[package]
name = "ox_jsdoc"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Binary AST format and lazy decoder for ox_jsdoc (parser-integrated, approach c-1)"

[lints.rust]
missing_docs = "warn"
unused_must_use = "warn"

[dependencies]
memchr = "2"
oxc_allocator.workspace = true
oxc_span.workspace = true
rustc-hash = "2"
smallvec = { version = "1.15.1", features = ["union"] }

[dev-dependencies]
criterion2 = { version = "3.0.2", default-features = false }
# oxc_jsdoc is included only for the parser bench's Rust-direct comparison
# row (`oxc_jsdoc::JSDoc::new(...).tags()` against the same fixture as the
# ox_jsdoc_binary parser benches). It is not pulled into the runtime crate.
oxc_jsdoc = "=0.123.0"

[[bench]]
name = "encoder"
harness = false

[[bench]]
name = "decoder"
harness = false

[[bench]]
name = "parser"
harness = false
