[package]
name = "ox_jsdoc_binary"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Binary AST format and lazy decoder for ox_jsdoc (parser-integrated, approach c-1)"

[lints.rust]
missing_docs = "warn"
unused_must_use = "warn"

[dependencies]
oxc_allocator.workspace = true
oxc_span.workspace = true

[dev-dependencies]
