[package]
name = "ox_jsdoc_origin_napi"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ox_jsdoc_origin = { path = "../../crates/ox_jsdoc_origin" }
oxc_allocator.workspace = true
napi = { version = "3", default-features = false }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
