[package]
name = "ox_jsdoc_binary_wasm"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ox_jsdoc_binary = { path = "../../crates/ox_jsdoc_binary" }
oxc_allocator.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
